apps/zitadel/k8s/db.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel-postgres
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: zitadel-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
