apps/zitadel/k8s/zitadel.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: zitadel
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
